增加了要演示内容列表,修改APP一些界面,把颜色的配置文件放到color.xml里面

--- a/代码类/Android前端/YZEduStudentClient/app/src/main/res/layout/activity_course_classification.xml
+++ b/代码类/Android前端/YZEduStudentClient/app/src/main/res/layout/activity_course_classification.xml
@@ -1,23 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical">
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:background="@color/colorPrimary"
-        android:layout_height="45dp" >
+        android:layout_height="45dp"
+        android:background="@color/colorPrimary">
 
         <ImageView
             android:id="@+id/imageView1"
             android:layout_width="30dp"
             android:layout_height="30dp"
-            android:onClick="back"
             android:layout_alignParentLeft="true"
             android:layout_centerVertical="true"
             android:layout_marginLeft="5dp"
+            android:onClick="back"
             android:src="@mipmap/back2" />
 
     </RelativeLayout>
@@ -25,26 +25,27 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="40dp"
-        android:background="#FFFFFF"
+        android:background="@color/Write"
         android:orientation="horizontal">
+
         <com.fstech.yzedusc.view.ClearEditText
             android:id="@+id/et_search"
-            android:layout_marginLeft="15dp"
-            android:gravity="center"
-            android:textSize="12sp"
-            android:textColor="#333333"
-            android:layout_weight="1"
             android:layout_width="wrap_content"
+            android:layout_height="30dp"
             android:layout_gravity="center_vertical"
+            android:layout_marginLeft="15dp"
+            android:layout_weight="1"
+            android:background="@color/grey0"
+            android:gravity="center"
             android:hint="@string/input_search_content"
-            android:background="#F0F0F0"
-            android:layout_height="30dp" />
+            android:textColor="@color/text_black3"
+            android:textSize="12sp" />
 
         <TextView
             android:id="@+id/tv_search"
             android:layout_width="50dp"
-            android:layout_marginRight="5dp"
             android:layout_height="match_parent"
+            android:layout_marginRight="5dp"
             android:gravity="center"
             android:text="@string/search" />
 
@@ -53,7 +54,7 @@
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="#FFFFFF">
+        android:background="@color/Write">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -65,20 +66,20 @@
                 android:id="@+id/lv_classification_own"
                 android:layout_width="100dp"
                 android:layout_height="match_parent"
-                android:background="#F2F2F2" />
+                android:background="@color/grey2" />
 
             <com.qmuiteam.qmui.widget.QMUIFloatLayout
-                android:paddingTop="15dp"
-                android:layout_marginLeft="20dp"
                 android:id="@+id/fl_content"
                 android:layout_width="wrap_content"
-                android:layout_weight="1"
-                android:gravity="left"
-                app:qmui_childHorizontalSpacing="20dp"
-                app:qmui_childVerticalSpacing="10dp"
                 android:layout_height="match_parent"
-                android:background="#FFFFFF"
-                android:orientation="vertical">
+                android:layout_marginLeft="20dp"
+                android:layout_weight="1"
+                android:background="@color/Write"
+                android:gravity="left"
+                android:orientation="vertical"
+                android:paddingTop="15dp"
+                app:qmui_childHorizontalSpacing="20dp"
+                app:qmui_childVerticalSpacing="10dp">
 
             </com.qmuiteam.qmui.widget.QMUIFloatLayout>
 
