--- a/代码类/Android前端/YZEduStudentClient/app/src/main/res/layout/item_announcement.xml
+++ b/代码类/Android前端/YZEduStudentClient/app/src/main/res/layout/item_announcement.xml
@@ -27,17 +27,17 @@
                 android:layout_gravity="center_vertical"
                 android:layout_marginLeft="15dp"
                 android:text="[ 置顶 ]"
-                android:textSize="16sp"
-                android:textColor="@color/qmui_btn_blue_text" />
+                android:textColor="@color/qmui_btn_blue_text"
+                android:textSize="16sp" />
 
             <TextView
                 android:id="@+id/item_announcement_tv_title"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_vertical"
+                android:layout_marginLeft="15dp"
                 android:layout_weight="1"
                 android:maxLength="12"
-                android:layout_marginLeft="15dp"
                 android:text="这是公告标题"
                 android:textSize="16sp" />
 
@@ -48,21 +48,21 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="right"
+            android:layout_marginBottom="10dp"
             android:layout_marginRight="15dp"
             android:text="2018-03-12"
-            android:layout_marginBottom="10dp"
-            android:textColor="#666666" />
+            android:textColor="@color/text_black6" />
 
         <TextView
             android:id="@+id/item_announcement_tv_content"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textColor="#666666"
-            android:maxLines="3"
+            android:layout_marginBottom="5dp"
             android:layout_marginLeft="15dp"
             android:layout_marginRight="15dp"
-            android:layout_marginBottom="5dp"
-            android:text="这是公告内容这是公告内容这是公告内容这是公告内容这是公告内容这是公告内容这是公告内容这是公告内容这是公告内容这是公告内容" />
+            android:maxLines="3"
+            android:text="这是公告内容这是公告内容这是公告内容这是公告内容这是公告内容这是公告内容这是公告内容这是公告内容这是公告内容这是公告内容"
+            android:textColor="@color/text_black6" />
 
     </LinearLayout>
 
