--- a/代码类/Android前端/YZEduStudentClient/app/src/main/res/layout/activity_course_cfa_result.xml
+++ b/代码类/Android前端/YZEduStudentClient/app/src/main/res/layout/activity_course_cfa_result.xml
@@ -8,6 +8,7 @@
         android:layout_width="match_parent"
         android:layout_height="45dp"
         android:background="@color/colorPrimary">
+
         <ImageView
             android:id="@+id/imageView1"
             android:layout_width="30dp"
@@ -18,13 +19,14 @@
             android:onClick="back"
             android:src="@mipmap/back2" />
     </RelativeLayout>
+
     <com.fstech.yzedusc.view.HorizontalListView
-        android:layout_width="match_parent"
         android:id="@+id/lv_cfa"
-        android:background="#F2F2F2"
-        android:choiceMode="singleChoice"
-        android:layout_height="40dp">
-    </com.fstech.yzedusc.view.HorizontalListView>
+        android:layout_width="match_parent"
+        android:layout_height="40dp"
+        android:background="@color/grey2"
+        android:choiceMode="singleChoice"></com.fstech.yzedusc.view.HorizontalListView>
+
     <com.scwang.smartrefresh.layout.SmartRefreshLayout
         android:id="@+id/smart_refresh"
         android:layout_width="match_parent"
