--- a/代码类/Android前端/YZEduStudentClient/app/src/main/res/layout/activity_course_search_result.xml
+++ b/代码类/Android前端/YZEduStudentClient/app/src/main/res/layout/activity_course_search_result.xml
@@ -24,7 +24,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="40dp"
-        android:background="#FFFFFF"
+        android:background="@color/Write"
         android:orientation="horizontal">
 
         <com.fstech.yzedusc.view.ClearEditText
@@ -34,10 +34,10 @@
             android:layout_gravity="center_vertical"
             android:layout_marginLeft="15dp"
             android:layout_weight="1"
-            android:background="#F0F0F0"
+            android:background="@color/grey0"
             android:gravity="center"
             android:hint="@string/input_search_content"
-            android:textColor="#333333"
+            android:textColor="@color/text_black3"
             android:textSize="12sp" />
 
         <TextView
