--- a/代码类/Android前端/YZEduStudentClient/app/src/main/res/layout/activity_main.xml
+++ b/代码类/Android前端/YZEduStudentClient/app/src/main/res/layout/activity_main.xml
@@ -49,7 +49,7 @@
         android:layout_width="match_parent"
         android:layout_height="2px"
         android:layout_above="@id/rg_tab_bar"
-        android:background="#d2d2d2" />
+        android:background="@color/line_d2" />
 
     <android.support.v4.view.ViewPager
         android:id="@+id/vpager"
