--- a/代码类/Android前端/YZEduStudentClient/app/src/main/res/layout/fragment_learn.xml
+++ b/代码类/Android前端/YZEduStudentClient/app/src/main/res/layout/fragment_learn.xml
@@ -3,14 +3,14 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#F9F9F9"
+    android:background="@color/grey9"
     android:orientation="vertical">
 
     <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="60dp"
-        android:paddingTop="15dp"
-        android:background="@color/colorPrimary">
+        android:background="@color/colorPrimary"
+        android:paddingTop="15dp">
 
         <TextView
             android:id="@+id/textView1"
@@ -18,7 +18,7 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:text="@string/learn"
-            android:textColor="#FFFFFF"
+            android:textColor="@color/Write"
             android:textSize="22sp" />
     </FrameLayout>
 
@@ -33,7 +33,7 @@
             android:layout_marginLeft="15dp"
             android:layout_marginRight="15dp"
             android:layout_marginTop="10dp"
-            android:background="#FFFFFF"
+            android:background="@color/Write"
             app:cardCornerRadius="@dimen/dimen_9dp">
 
             <LinearLayout
@@ -57,7 +57,7 @@
                     android:layout_marginTop="10dp"
                     android:maxLines="3"
                     android:text="书籍是人类进步的阶梯"
-                    android:textColor="#666666" />
+                    android:textColor="@color/text_black6" />
 
                 <TextView
                     android:id="@+id/tv_read_date"
@@ -68,7 +68,7 @@
                     android:layout_marginRight="10dp"
                     android:layout_marginTop="5dp"
                     android:text="2018-03-25"
-                    android:textColor="#999999" />
+                    android:textColor="@color/text_black9" />
 
             </LinearLayout>
         </android.support.v7.widget.CardView>
@@ -84,7 +84,7 @@
             <View
                 android:layout_width="match_parent"
                 android:layout_height="0.1dp"
-                android:background="#d6d6d6" />
+                android:background="@color/line_d6" />
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -94,7 +94,7 @@
                 <View
                     android:layout_width="0.1dp"
                     android:layout_height="match_parent"
-                    android:background="#d6d6d6" />
+                    android:background="@color/line_d6" />
 
                 <RelativeLayout
                     android:id="@+id/main_re_mycourse"
@@ -123,7 +123,7 @@
                 <View
                     android:layout_width="0.1dp"
                     android:layout_height="match_parent"
-                    android:background="#d6d6d6" />
+                    android:background="@color/line_d6" />
 
                 <RelativeLayout
                     android:id="@+id/main_re_practical"
@@ -152,19 +152,19 @@
                 <View
                     android:layout_width="0.1dp"
                     android:layout_height="match_parent"
-                    android:background="#d6d6d6" />
+                    android:background="@color/line_d6" />
             </LinearLayout>
 
             <View
                 android:layout_width="match_parent"
                 android:layout_height="0.1dp"
-                android:background="#d6d6d6" />
+                android:background="@color/line_d6" />
 
             <View
                 android:layout_width="match_parent"
                 android:layout_height="0.1dp"
                 android:layout_marginTop="15dp"
-                android:background="#d6d6d6" />
+                android:background="@color/line_d6" />
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -174,7 +174,7 @@
                 <View
                     android:layout_width="0.1dp"
                     android:layout_height="match_parent"
-                    android:background="#d6d6d6" />
+                    android:background="@color/line_d6" />
 
                 <RelativeLayout
                     android:id="@+id/main_re_task"
@@ -203,7 +203,7 @@
                 <View
                     android:layout_width="0.1dp"
                     android:layout_height="match_parent"
-                    android:background="#d6d6d6" />
+                    android:background="@color/line_d6" />
 
                 <RelativeLayout
                     android:id="@+id/main_re_grade"
@@ -232,13 +232,13 @@
                 <View
                     android:layout_width="0.1dp"
                     android:layout_height="match_parent"
-                    android:background="#d6d6d6" />
+                    android:background="@color/line_d6" />
             </LinearLayout>
 
             <View
                 android:layout_width="match_parent"
                 android:layout_height="0.1dp"
-                android:background="#d6d6d6" />
+                android:background="@color/line_d6" />
 
 
         </LinearLayout>
