--- a/代码类/Android前端/YZEduStudentClient/app/src/main/res/layout/item_information.xml
+++ b/代码类/Android前端/YZEduStudentClient/app/src/main/res/layout/item_information.xml
@@ -11,13 +11,13 @@
         android:layout_marginLeft="15dp"
         android:layout_marginRight="15dp"
         android:layout_marginTop="10dp"
-        android:background="#FFFFFF"
+        android:background="@color/Write"
         app:cardCornerRadius="@dimen/dimen_9dp">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="#FFFFFF"
+            android:background="@color/Write"
             android:orientation="vertical">
 
             <ImageView
@@ -43,7 +43,7 @@
                 android:layout_gravity="right"
                 android:layout_margin="10dp"
                 android:text="2018-03-25"
-                android:textColor="#999999" />
+                android:textColor="@color/text_black9" />
 
             <TextView
                 android:id="@+id/tv_information_content"
@@ -54,7 +54,7 @@
                 android:layout_marginRight="15dp"
                 android:maxLines="2"
                 android:text="这是资讯内容"
-                android:textColor="#666666" />
+                android:textColor="@color/text_black6" />
         </LinearLayout>
     </android.support.v7.widget.CardView>
 </LinearLayout>
