--- a/代码类/Android前端/YZEduStudentClient/app/src/main/res/layout/item_lesson.xml
+++ b/代码类/Android前端/YZEduStudentClient/app/src/main/res/layout/item_lesson.xml
@@ -8,9 +8,9 @@
         android:layout_width="wrap_content"
         android:layout_height="35dp"
         android:layout_marginLeft="15dp"
-        android:textColor="#666666"
         android:layout_weight="1"
-        android:maxLines="1"
         android:gravity="center_vertical"
-        android:text="TextView" />
+        android:maxLines="1"
+        android:text="TextView"
+        android:textColor="@color/Write" />
 </LinearLayout>
