--- a/代码类/Android前端/YZEduStudentClient/app/src/main/res/layout/item_live_room.xml
+++ b/代码类/Android前端/YZEduStudentClient/app/src/main/res/layout/item_live_room.xml
@@ -7,10 +7,10 @@
     <android.support.v7.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="5dp"
         android:layout_marginLeft="10dp"
         android:layout_marginRight="10dp"
         android:layout_marginTop="5dp"
-        android:layout_marginBottom="5dp"
         android:background="@color/Write"
         app:cardCornerRadius="@dimen/dimen_9dp">
 
@@ -36,7 +36,7 @@
                     android:gravity="center_vertical"
                     android:paddingLeft="5dp"
                     android:text="直播标题1"
-                    android:textColor="#333333" />
+                    android:textColor="@color/text_black3" />
 
                 <TextView
                     android:id="@+id/item_live_tv_state"
@@ -74,7 +74,7 @@
                     android:layout_height="match_parent"
                     android:gravity="center_vertical"
                     android:text="@string/live_room_id"
-                    android:textColor="#999999" />
+                    android:textColor="@color/text_black9" />
 
                 <TextView
                     android:id="@+id/item_live_tv_room_id"
@@ -82,7 +82,7 @@
                     android:layout_height="match_parent"
                     android:gravity="center_vertical"
                     android:text="100338234"
-                    android:textColor="#999999" />
+                    android:textColor="@color/text_black9" />
             </LinearLayout>
         </LinearLayout>
     </android.support.v7.widget.CardView>
