--- a/代码类/Android前端/YZEduStudentClient/app/src/main/res/layout/item_tab.xml
+++ b/代码类/Android前端/YZEduStudentClient/app/src/main/res/layout/item_tab.xml
@@ -2,18 +2,18 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical" >
-        
-        <TextView
+    android:orientation="vertical">
+
+    <TextView
         android:id="@+id/cfa_name"
         android:layout_width="80dp"
         android:layout_height="40dp"
-        android:background="#F2F2F2"
-        android:textColor="@drawable/item_tab_color"
         android:layout_marginLeft="20dp"
-        android:gravity="center"
+        android:background="@color/grey2"
         android:clickable="true"
-        android:text="TextView" />
-    
+        android:gravity="center"
+        android:text="TextView"
+        android:textColor="@drawable/item_tab_color" />
+
 
 </LinearLayout>
